--- a/src/App.scss
+++ b/src/App.scss
@@ -6,12 +6,13 @@
 }
 body {
 	display: flex;
-	justify-content: center;
 	align-items: center;
 	width: 100vw;
 	height: 100vh;
+	margin-left: 20px;
 	background-color: #fff;
 }
+
 
 //Big sections:
 .container {
