--- a/src/App.scss
+++ b/src/App.scss
@@ -64,3 +64,8 @@ body {
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 	z-index: 0;
 }
+
+//icon in ConfirmDeleted component: 
+.fa-circle-check {
+	font-size: 18px;
+}
